# cryptoagent

./: .gitignore  pyproject.toml
cli/: main.py
cryptoagent/: __init__.py  config.py
cryptoagent/agents/: __init__.py  compact_decision.py  enriched_decision.py  schemas.py
cryptoagent/agents/analysts/: analyst_base.py  narrative_analyst.py  onchain_analyst.py  sentiment_analyst.py  technical_analyst.py
cryptoagent/agents/managers/: portfolio_manager.py  research_manager.py
cryptoagent/agents/researchers/: bear_researcher.py  bull_researcher.py
cryptoagent/agents/risk/: aggressive.py  conservative.py  neutral.py
cryptoagent/agents/trader/: trader.py
cryptoagent/agents/utils/: agent_states.py  agent_utils.py
cryptoagent/bridge/: __init__.py  signal_builder.py
cryptoagent/dataflows/: __init__.py  config.py
cryptoagent/graph/: __init__.py  conditional_logic.py  memory.py  propagation.py  setup.py  trading_graph.py
scripts/: run_analysis.py
tests/: live_test_weth.py  smoke_test.py
